# CorticalRegionSelection

./: README.md  pyproject.toml
channel_importance/: __init__.py  eeg.py  preprocessing_fixed.py  regression_datasets.py
channel_importance/feature_tests/: __init__.py
channel_importance/feature_tests/Classification_tests/: README.md  run_all_datasets_classification_agg.py  run_all_datasets_classification_agg_loso.py  test_feature_classification_agg.py  test_feature_classification_agg_loso.py
channel_importance/feature_tests/Regression_tests/: run_all_datasets_regression_agg.py  run_all_datasets_regression_agg_loso.py  test_feature_regression_agg.py  test_feature_regression_agg_loso.py
core/: __init__.py  utils.py
datasets/: README.md  __init__.py  processed_eeg.py  raw_eeg.py
datasets/HTC/: load_htc.py
datasets/MOCAS/: load_mocas.py
datasets/NBACK/: load_nback.py
datasets/WAUC/: README.md  WAUC_CLASSIFICATION_SUMMARY.md  load_wauc.py
datasets/sense-42/: README.md  load_sense42.py
